--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 :root {
     --unnaGreen: #95D3C2;
     --unnaOrange: #d39c95;
+    --unnaBrun: #29130a;
 }
 
 html {
@@ -74,7 +75,7 @@ section {
 .section-head {
     padding: 16px;
 
-    background: linear-gradient(var(--unnaGreen) 40%, var(--unnaOrange));
+    background: linear-gradient(var(--unnaGreen), white);
     /* height: 100%; */
 }
 
@@ -93,6 +94,8 @@ section {
     height: 100%;
     width: 100%;
     overflow: hidden; /* Ensures the pseudo-element stays inside */
+    border-radius: 16px;
+
 }
 
 .section-head__bg-photo::before {
@@ -262,7 +265,7 @@ section {
     width: 100%;
     padding: 16px;
 
-    background: linear-gradient(var(--unnaOrange), var(--unnaGreen) 25%);
+    background: white;
 
 }
 
@@ -275,6 +278,9 @@ section {
 
 .photo-item {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
     width: 100%;
     left: 0;
     opacity: 1;
@@ -287,33 +293,55 @@ section {
     opacity: 0;
 }
 
-.photo-item img {
+.photo-img {
     position: relative;
+    display: flex;
+    /* justify-content: stretch; */
     /* border: 1px solid white; */
     /* border-top: 4px solid white; */
-    /* border-radius: 24px; */
+    border-radius: 16px;
     width: 100%;
-    height: auto;
-    object-fit: contain;
+    height: 400px;
+    overflow: hidden;
+    /* background-size: 200%; */
+    /* scale: 1.2; */
     
+    /* aspect-ratio: 1 /1; */
+}
+.photo-img img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /* scale: 1.2; */
+    transform-origin: bottom;
+    object-fit: cover;
     /* aspect-ratio: 1 /1; */
 }
 
 .photo-text {
     position: relative;
-    font-size: 2rem;
     top: 15%;
     /* padding-left: 16px; */
-    color: white;
+    color: var(--unnaBrun);
     text-align: start;
     left: 0px;
-    transition: left .5s ease-in-out;
+    transition: left .5s ease-in-out .1s;
 
     /* padding: 4px; */
 }
 
+.photo-text-head {
+    font-size: 2rem;
+}
+
+.photo-text-para {
+    color: var(--unnaGreen);
+    padding-right: 25%;
+    font-size: 1rem;
+}
+
 .photo-text.off-frame {
-    left: 100%
+    left: -100%
 }
 
 .open-container {
@@ -325,8 +353,7 @@ section {
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
-    background: linear-gradient(var(--unnaGreen) 40%, var(--unnaOrange));
-
+    background: linear-gradient(white, var(--unnaGreen) 40%);
     /* overflow: hidden; */
     /* background-color: black; */
 }
@@ -362,10 +389,12 @@ section {
     justify-content: end;
     text-align: start;
     font-size: 3rem;
+    color: var(--unnaBrun);
 }
 
 .open-span:first-child, .open-span:last-child {
     font-size: 2rem;
+    color: white;
 }
 
 .social {
@@ -603,6 +632,7 @@ section {
                 rotate .75s ease-in-out,
                 left .75s ease-in-out,
                 transform .75s ease-in-out,
+                fill .75s ease-in-out,
                 scale .75s ease-in-out;
     /* stroke-width: 1px; */
     /* z-index: 500; */
@@ -612,7 +642,8 @@ section {
     rotate: 45deg;
     top: 10%;
     left: 20%;
-    fill: white;
+    fill: var(--unnaBrun);
+    /* fill: white; */
 
     /* transform: translate(10px, -150%); */
     /* right: -20%; */
